--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -7,6 +7,7 @@
   "NEW_SEARCH":"Nova Busca",
   "NAME": "Nome",
   "SAVE": "Salvar",
+  "EDIT": "Editar",
   "SIGNUP_DISTRIBUTOR":"Cadastre sua distribuidora!",
 
   "CEP": "CEP",
