--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -8,6 +8,7 @@
   "NAME": "Nome",
   "SAVE": "Salvar",
   "EDIT": "Editar",
+  "SELECT_PHOTO": "Selecione uma imagem",
   "SIGNUP_DISTRIBUTOR":"Cadastre sua distribuidora!",
 
   "CEP": "CEP",
